Bug 44776 - Occasional crash in Connection::readEventHandler or assertion failure in Connection::writeEventHandler due to ERROR_IO_INCOMPLETE
Summary: Occasional crash in Connection::readEventHandler or assertion failure in Conn...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows XP
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords: PlatformOnly
Depends on:
Blocks:
 
Reported: 2010-08-27 09:51 PDT by Adam Roben (:aroben)
Modified: 2010-08-27 10:17 PDT (History)
2 users (show)

See Also:


Attachments
Patch (2.98 KB, patch)
2010-08-27 09:52 PDT, Adam Roben (:aroben)
sam: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2010-08-27 09:51:27 PDT
Occasional crash in Connection::readEventHandler or assertion failure in Connection::writeEventHandler due to ERROR_IO_INCOMPLETE
Comment 1 Adam Roben (:aroben) 2010-08-27 09:52:04 PDT
Created attachment 65726 [details]
Patch
Comment 2 Sam Weinig 2010-08-27 09:53:22 PDT
Comment on attachment 65726 [details]
Patch

Looks good!
Comment 3 Adam Roben (:aroben) 2010-08-27 10:16:31 PDT
Committed r66231: <http://trac.webkit.org/changeset/66231>