WebKit2/Platform/CoreIPC/win/ConnectionWin.cpp
@@ -153,7 +153,7 @@ void Connection::readEventHandler()
 
             // FIXME: We should figure out why we're getting this error.
             case ERROR_IO_INCOMPLETE:
-                break;
+                return;
             default:
                 ASSERT_NOT_REACHED();
             }
@@ -168,6 +168,7 @@ void Connection::readEventHandler()
             // either when receiving ERROR_MORE_DATA from ::GetOverlappedResult above or when
             // ::PeekNamedPipe tells us the size below. We never set m_readBuffer to a size larger
             // than the message.
+            ASSERT(m_readBuffer.size() >= sizeof(MessageID));
             size_t realBufferSize = m_readBuffer.size() - sizeof(MessageID);
 
             unsigned messageID = *reinterpret_cast<unsigned*>(m_readBuffer.data() + realBufferSize);
@@ -233,6 +234,10 @@ void Connection::writeEventHandler()
     DWORD numberOfBytesWritten = 0;
     if (!::GetOverlappedResult(m_connectionPipe, &m_writeState, &numberOfBytesWritten, FALSE)) {
         DWORD error = ::GetLastError();
+        if (error == ERROR_IO_INCOMPLETE) {
+            // FIXME: We should figure out why we're getting this error.
+            return;
+        }
         ASSERT_NOT_REACHED();
     }
 
